--- a/html/1-Let & Const Variable.html
+++ b/html/1-Let & Const Variable.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction</title>
+    <title>Let & Const Variable</title>
 </head>
 
 <body>
-
+    <script src="../js/1-Let & Const Variable.js"></script>
 </body>
 
 </html>
