--- a/html/2-Template Strings.html
+++ b/html/2-Template Strings.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction</title>
+    <title>Template Strings</title>
 </head>
 
 <body>
-
+    <script src="../js/2-Template Strings.js"></script>
 </body>
 
 </html>
