--- a/html/3-Arrow Function.html
+++ b/html/3-Arrow Function.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction</title>
+    <title>Arrwo Function</title>
 </head>
 
 <body>
-
+    <script src="../js/3-Arrow Function.js"></script>
 </body>
 
 </html>
