--- a/html/4-Rest Operator.html
+++ b/html/4-Rest Operator.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction</title>
+    <title>Rest Operator</title>
 </head>
 
 <body>
-
+    <script src="../js/4-Rest Operator.js"></script>
 </body>
 
 </html>
