--- a/html/15-Ajex.html
+++ b/html/15-Ajex.html
@@ -11,6 +11,14 @@
     <div id="demo">Here we load data</div>
     <button id="btn">Click</button>
     <script src="../js/15-Ajex.js"></script>
+    <table id="data" border="2px">
+        <tr>
+            <th>id</th>
+            <th>name</th>
+            <th>email</th>
+            <th>city</th>
+        </tr>
+    </table>
 </body>
 
 </html>
