Learn Advance JS

--- a/html/9-OOP Class & Object.html
+++ b/html/9-OOP Class & Object.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OOP Class & Object</title>
+    <title>Object Oriented Programing Class & Object</title>
 </head>
 
 <body>
