--- a/html/11-Modules.html
+++ b/html/11-Modules.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script type="module" src="./11-Modules.js"></script>
+    <script type="module" src="../js/11.1-Modules.js"></script>
 </body>
 
 </html>
