--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script>
+    <!-- <script>
         // let hello = () => {
         //     for (let i = 1; i <= 10; i++) {
         //         console.log(typeof `${i * 2}`);
@@ -29,7 +29,9 @@
         // console.log();
         console.log(city);
         console.log(num1);
-        console.log(num2);
+        console.log(num2); -->
+
+    <script src="./js/18-Iterators.js"></script>
     </script>
 </body>
 
