Learn advance js

--- a/html/15-Ajex.html
+++ b/html/15-Ajex.html
@@ -8,17 +8,10 @@
 </head>
 
 <body>
-    <div id="demo">Here we load data</div>
-    <button id="btn">Click</button>
-    <script src="../js/15-Ajex.js"></script>
-    <table id="data" border="2px">
-        <tr>
-            <th>id</th>
-            <th>name</th>
-            <th>email</th>
-            <th>city</th>
-        </tr>
-    </table>
+    <p id="demo">Here we load data</p>
+    <button onclick="loadData()">Click</button>
+    
+    <script src="../js/14-Ajax.js"></script>
 </body>
 
 </html>
