--- a/html/16-Fetch.html
+++ b/html/16-Fetch.html
@@ -4,11 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fetch</title>
+    <title>Fetch Example</title>
 </head>
 
 <body>
-    <script src="../js/16-Fetch.js"></script>
+    <form id="dataForm">
+        Title: <input type="text" id="titleText"><br>
+        Body: <input type="text" id="bodyText"><br>
+        User Id: <input type="text" id="userId"><br>
+        <input type="submit" id="saveForm" value="Submit">
+    </form>
+    <script src="../js/15-Fetch.js"></script>
 </body>
 
 </html>
